# codepilot

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  eval.yml
codepilot/: __init__.py  cli.py  doctor.py
codepilot/agent/: _utils.py  compaction.py  context_manager.py  graph.py  nodes.py  prompts.py  registry.py  router.py  state.py
codepilot/config/: context_windows.py  permissions.py  providers.py  settings.py
codepilot/context/: instructions.py  project.py  selector.py
codepilot/plugins/: hooks.py  manager.py
codepilot/skills/: __init__.py  manager.py
codepilot/storage/: db.py  models.py  resume.py
codepilot/tools/: __init__.py  context.py  file_tools.py  git_tool.py  mcp_tool.py  search_tools.py  shell_tool.py  skill_tool.py  task_tool.py  todo_tool.py  truncation.py  web_fetch_tool.py  (+1 more)
docs/: UPGRADE_PLAN.md  evaluation-guide.md  evaluation-report-20260607.md  production-readiness-assessment.md  productization-roadmap.md  react-agent-paradigm-analysis.md  release-checklist.md  tech-stack-analysis.md  technical-doc.md
evals/: _inspect.py  analyze_traces.py  compare_runs.py  detect_anomalies.py  evaluators.py  run_eval.py  run_local.py  trace_to_eval.py  utils.py
tests/: test_agent.py  test_cli.py  test_commands.py  test_config.py  test_context_manager.py  test_doctor.py  test_evals.py  test_instructions.py  test_intent.py  test_message_invariant.py  test_packaging.py  test_plugins.py  test_renderer.py  test_repl.py  test_scenarios.py  test_skills_mcp.py  test_storage.py  test_tools.py  test_truncate.py
(+20 files in other folders)
