[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codepilot"
version = "0.1.0"
description = "AI coding agent for the terminal, powered by LangGraph"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-community>=0.3.0",
    "prompt-toolkit>=3.0.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "click>=8.0.0",
    "pyyaml>=6.0.0",
    "httpx>=0.27.0",
    "ddgs>=6.0.0",
    "langsmith>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.5.0",
]
eval = [
    "agentevals>=0.1.0",
]
mcp = [
    "mcp>=1.0.0",
]

[project.scripts]
codepilot = "codepilot.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["codepilot"]
artifacts = [
    "codepilot/skills/builtin/*/SKILL.md",
]

[tool.hatch.build.targets.sdist]
include = [
    "/AGENTS.md",
    "/README.md",
    "/codepilot",
    "/docs",
    "/evals",
    "/opencode_analysis.pdf",
    "/pyproject.toml",
    "/tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
